# pybind-example

./: .gitignore  CMakeLists.txt  README.md
include/: Calculator.hpp
python/: CMakeLists.txt  pybind_module.cpp
src/: CMakeLists.txt  Calculator.cpp
